--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "rabbitmq-connector-api",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A RabbitMQ Connector for Microservices",
-  "main": "./dist/rabbitmq.js",
-  "types": "./dist/rabbitmq.d.ts",
+  "main": "src/rabbitmq.js",
+  "types": "src/rabbitmq.d.ts",
   "scripts": {
     "build": "tsc",
     "lint": "eslint . --ext .ts",
@@ -26,9 +26,6 @@
   },
   "homepage": "https://github.com/tito-k/rabbitmq-connector#readme",
   "devDependencies": {
-    "@types/amqplib": "^0.10.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.4",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "eslint": "^8.40.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -38,6 +35,9 @@
     "prettier": "^2.8.8"
   },
   "dependencies": {
-    "amqplib": "^0.10.3"
+    "@types/amqplib": "^0.10.1",
+    "amqplib": "^0.10.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
   }
 }
